# esp32-Weather-clock

./: .cproject  .gitignore  .project  .project.bak  CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
components/BLUFI/: .cproject  CMakeLists.txt  blufi_example_main.c  blufi_example_main.h
components/LCD/: CMakeLists.txt  bmp121.h  bmp321.h  bmp322.h  bmp323.h  bmp324.h  bmp325.h  bmp326.h  bmp4_1.h  bmp5_2.h  bmp81.h  bmp811.h  bmp_02.h  font.h  gbk.h  lcd.c  lcd.h
components/LED/: CMakeLists.txt  LED.h
components/WIFI/: CMakeLists.txt  WIFI.c  WIFI.h
components/blu_fi/: CMakeLists.txt  blu_fi.c
components/convert/: CMakeLists.txt  convert.c
components/gui/: CMakeLists.txt  gui.c  gui.h
components/key/: CMakeLists.txt  key.c  key.h
components/sd_spi/: CMakeLists.txt  sd_spi.c
components/smartconfig/: CMakeLists.txt  smartconfig.c
components/tim_data/: CMakeLists.txt  tim_data.c  tim_data.h
components/weather/: CMakeLists.txt  weather.c  weather.h
doc/sd/: FOO.TXT  HELLO1.TXT  bmp10.txt  bmp11.txt  bmp12.txt  bmp13.txt  bmp14.txt  bmp15.txt  bmp16.txt  bmp18.txt  bmp19.txt  bmp2.txt  bmp20.txt  bmp21.txt  bmp22.txt  bmp23.txt  bmp24.txt  bmp25.txt  bmp28.txt  bmp29.txt  bmp3.txt  bmp30.txt  bmp31.txt  bmp34.txt  bmp35.txt  bmp36.txt  bmp37.txt  bmp4.txt  bmp5.txt  bmp5_2.txt  bmp6.txt  bmp7.txt  bmp8.txt  bmp81.h  bmp9.txt
http/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  https_request_example_main.c  main.c
myDriver/LCD/: bmp1.h  bmp3.h  bmp320.h  bmp_01.h  font.h  hzk.h  lcd.c  lcd.h
myDriver/LED/: LED.c
myDriver/gui/: gui.c  gui.h
myDriver/key/: key.c  key.h
(+10 files in other folders)
